test/error/error.input57.zc
Previously defined struct:fred on line 2
